# fulmo-cookiecutter-poetry

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  duties.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/workflows/: main.yml
changelog/: index.html
docs/: prompt_arguments.md  tutorial.md
docs/features/: cicd.md  linting.md  makefile.md  mkdocs.md  publishing.md  tox.md
features/cicd/: index.html
features/codecov/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/poetry/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
fulmo_cookiecutter_poetry/: cli.py
hooks/: post_gen_project.py  pre_gen_project.py
prompt_arguments/: index.html
search/: search_index.json
tests/: test_cookiecutter.py
tutorial/: index.html
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  duties.py  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: main.yml  on-release-main.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
